Fix for scrollbar showing when chat is open

--- a/client/style.css
+++ b/client/style.css
@@ -17,6 +17,7 @@ html {
 body {
 	background-color:#bbddff;
 	margin:0;
+	overflow: hidden;
 }
 
 /* Gamewrapper */
